--- a/src/styles/layout/layout-main.css
+++ b/src/styles/layout/layout-main.css
@@ -39,11 +39,18 @@
     margin-bottom: 3rem;
     padding: 2rem;
     font-size: 2.6rem;
-    color: rgb(209, 220, 235);
-    background-color: #F7E7C0;
     text-align: center;
-    border-radius: 10px;
+    color: var(--color-main-title);
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+
+    /* background-color: #F7E7C0; */
+    
+    background-color: var(--bg-light);
+    background-image: var(--bg-grid-light);
+    background-size: var(--bg-grid-size);
+    background-repeat: var(--bg-grid-repeat);
+
+    border-radius: 10px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -63,8 +70,8 @@
     border-radius: 0.5rem;
 
     /* background-color: #F4F4FE; */
-    background: radial-gradient(circle, rgb(255, 255, 255), rgb(219, 228, 240), rgb(176, 196, 236));
-    box-shadow: 10px 10px 10px rgb(209, 220, 235);
+    background: var(--bg-main-section);
+    box-shadow: 2px 2px 10px rgb(209, 220, 235);
 }
 
 @media(min-width: 480px) {
