--- a/src/styles/layout/layout.css
+++ b/src/styles/layout/layout.css
@@ -8,6 +8,45 @@
 */
 
 
+
+:root {
+    
+    /* ----- Colores principales ----- */
+    --color-primary: #036AAD;
+    --color-main-title: #d1dceb;
+    --color-grid: #e5e7eb;
+
+    /* ----- Fondos lisos ----- */
+    --bg-white: #ffffff;
+    --bg-light: #F7E7C0;
+    --bg-dark: #1E293B;
+                
+    /*  -----  Background Cuadricula  -----  */
+    --bg-grid-light:
+        linear-gradient(to right, var(--color-grid) 1px, transparent 1px),
+        linear-gradient(to bottom, var(--color-grid) 1px, transparent 1px);
+
+    /*  -----  Background Gradiente Header  -----  */
+    --bg-grid-pattern:
+        linear-gradient(to right, rgba(229, 231, 235, 0.8) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(229, 231, 235, 0.8) 1px, transparent 1px),
+        radial-gradient(circle 500px at 20% 100%, rgba(139, 92, 246, 0.3), transparent),
+        radial-gradient(circle 500px at 100% 80%, rgba(59, 130, 246, 0.3), transparent);
+
+    /*  -----  Background Gradiente Main Section  -----  */
+    --bg-main-section: 
+        radial-gradient(circle, rgb(255, 255, 255), rgb(219, 228, 240), rgb(176, 196, 236));
+   
+    --bg-grid-size: 
+        48px 48px, 
+        48px 48px, 
+        100% 100%, 
+        100% 100%;
+    
+    --bg-grid-repeat: repeat;
+}
+
+
 html {
     font-size: 10px;
 }
