--- a/src/styles/layout/layout-header.css
+++ b/src/styles/layout/layout-header.css
@@ -9,21 +9,6 @@
 
 
 
-.dark {
-    
-     background-color: var(--bg-dark);
-    --bg-grid-pattern: 
-        linear-gradient(to right, rgba(229, 231, 235, 0.8) 1px, transparent 1px),
-        linear-gradient(to bottom, rgba(229, 231, 235, 0.8) 1px, transparent 1px),
-        radial-gradient(circle 500px at 20% 100%, rgba(23, 19, 31, 0.3), transparent),
-        radial-gradient(circle 500px at 100% 80%, rgba(11, 11, 12, 0.3), transparent);
-
-   
-}
-
-
-
-
 .header__container {
     min-width: 100%;
     display: flex;
@@ -44,8 +29,8 @@
 
     /*  -----  background  -----  */
     background-color: var(--bg-white);
-    background-image: var(--bg-grid-pattern);
-    background-size: var(--bg-grid-size);
+    background-image: var(--bg-grid-pattern-header);
+    background-size: var(--bg-grid-size-48x48);
     background-repeat: var(--bg-grid-repeat);
     
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
