--- a/src/styles/layout/layout-footer.css
+++ b/src/styles/layout/layout-footer.css
@@ -95,30 +95,33 @@
 
 /*  -----  Logos y banners  -----  */
 
-.footer__jquery-logo,
-.footer__jquery-ui-logo {
+.footer__jquery-icon,
+.footer__jquery-ui-icon {
     width: 3rem;
     height: 3rem;
-
-    &:hover {
-        transform: scale(1.1);
-    }
+    transition: all 300ms ease-in-out;
 }
 
-.footer__jquery-banner,
-.footer__jquery-ui-banner {
+.footer__jquery-logo,
+.footer__jquery-ui-logo {
     width: 12rem;
     height: auto;
     mix-blend-mode: multiply;
+    transition: all 300ms ease-in-out;
+}
 
-    &:hover {
-        transform: scale(1.1);
-    }
+
+.footer__jquery-icon:hover,
+.footer__jquery-ui-icon:hover,
+.footer__jquery-logo:hover,
+.footer__jquery-ui-logo:hover {
+    transform: scale(1.1);
 }
 
 
 
 /*  -----  Contenedor del Título  -----  */
+
 .footer__container-title {
     width: 100%;
     margin-bottom: 2rem;
@@ -139,7 +142,9 @@
     box-shadow: 10px 10px 10px rgb(209, 220, 235);
 }
 
+
 /*  -----  Título  -----  */
+
 .footer__title {
     display: flex;
     flex-direction: column;
