--- a/src/styles/layout/layout-navbar.css
+++ b/src/styles/layout/layout-navbar.css
@@ -16,9 +16,7 @@
 
 :root {
     --bg: #EAF1FD;
-    /* color de fondo sólido */
     --grid: #e5e7eb;
-    /* gris de las líneas (Tailwind gray-200) */
 }
 
 
@@ -29,20 +27,20 @@
 */
 
 .navbar__container {
+    width: 100%;
     display: flex;
+    justify-content: center;
     align-self: center;
     position: absolute;
     top: 8.5rem;
-    width: 100%;
-    z-index: 10000;
+    z-index: 1000;
 }
 
 @media (min-width: 768px) {
 
     .navbar__container {
         position: relative;
-        margin-top: -10.5rem;
-        width: 50%;
+        margin-top: -3rem;
     }
 }
 
@@ -62,31 +60,24 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-
-
-    /*  ----- Background con cuadrícula + círculos  ----- */
-    background-color: var(--bg);
-    background-image:
-        /* cuadrícula vertical/horizontal: línea 1px + resto base sólida */
-        linear-gradient(to right, var(--grid) 1px, var(--bg) 1px),
-        linear-gradient(to bottom, var(--grid) 1px, var(--bg) 1px),
-
-        /* círculo violeta sin transparencia: se funde hacia el color base */
-        radial-gradient(circle 500px at 20% 100%,
-            #d6c6ff 0%, #e9e1ff 60%, var(--bg) 60%, var(--bg) 100%),
-
-        /* círculo azul sin transparencia: se funde hacia el color base */
-        radial-gradient(circle 500px at 100% 80%,
-            #c7daff 0%, #e7f1ff 60%, var(--bg) 60%, var(--bg) 100%);
-    background-size:
-        48px 48px,
-        48px 48px,
-        100% 100%,
-        100% 100%;
+    background: radial-gradient(125% 125% at 50% 10%, #fff 40%, #6366f1 100%);
     background-repeat: repeat;
+    box-shadow: 1px 1px 10px rgb(209, 220, 235);
+}
 
 
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+@media (min-width: 768px) {
+
+    .layout__navbar {
+        max-width: 125rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: start;
+        gap: 2rem;
+    }
+
 }
 
 
@@ -112,12 +103,12 @@
     gap: 0.4rem;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     cursor: pointer;
-    /* display: none; */
+    z-index: 10000;
+    transition: all 300ms ease-in-out;
+}
 
-    &:hover {
-        transition: all 300ms ease-in-out;
-        transform: scale(1.1);
-    }
+.navbar__btn-open:hover {
+    transform: scale(1.1);
 }
 
 .btn__icon-open {
@@ -148,7 +139,7 @@
     justify-content: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     cursor: pointer;
-    /* display: none; */
+    z-index: 10000;
 }
 
 .navbar__btn-close:hover {
@@ -172,14 +163,18 @@
 }
 
 
-
-
-
 /*
     --------------------------------------
     -----  Título del menú (navbar)  -----
     --------------------------------------
 */
+
+.navbar-jquery-icon,
+.navbar-jquery-ui-icon {
+    width: 2rem;
+    height: 2rem;
+}
+
 
 .navbar__title {
     width: 100%;
@@ -190,14 +185,13 @@
     gap: 2rem;
     margin-top: 2rem;
     margin-bottom: 3rem;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 15px;
     background-color: #F7E7C0;
     background-image:
         linear-gradient(to right, #e5e7eb 1px, transparent 1px),
         linear-gradient(to bottom, #e5e7eb 1px, transparent 1px);
     background-size: 40px 40px;
-
     box-shadow: 10px 10px 10px rgb(209, 220, 235);
 }
 
@@ -216,14 +210,24 @@
 
 .navbar__list {
     width: 100%;
-    /* height: 50rem; */
-    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     gap: 1rem;
     margin-bottom: 3rem;
+    padding: 2rem;
+    background: radial-gradient(125% 125% at 50% 10%, #fff 40%, #6366f1 100%);
+    background-repeat: repeat;
+}
+
+
+@media (min-width: 768px) {
+
+    .navbar__list {
+        width: 30rem;
+    }
+
 }
 
 .navbar__item {
@@ -235,6 +239,7 @@
     position: relative;
     width: 100%;
     padding: 0.5rem 2rem;
+    border-radius: 5px;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -251,31 +256,3 @@
     margin-left: 2rem;
     background-color: #3b82f6;
 }
-
-
-/*  -----  background  -----  */
-/* background-image:
-        linear-gradient(to right, rgba(229, 231, 235, 0.8) 1px, #e5e7eb 1px),
-        linear-gradient(to bottom, rgba(229, 231, 235, 0.8) 1px, #e5e7eb 1px),
-        radial-gradient(circle 500px at 20% 100%, rgba(139, 92, 246, 0.3), #8b5cf6),
-        radial-gradient(circle 500px at 100% 80%, rgba(59, 130, 246, 0.3), #3b82f6);
-    background-size:
-    48px 48px,
-    48px 48px,
-    100% 100%,
-    100% 100%;
-    background-repeat: repeat; */
-
-
-
-/*  -----  background  -----  */
-/* background-color: white;
-    background-image:
-        linear-gradient(to right, #e5e7eb 1px, transparent 1px),
-        linear-gradient(to bottom, #e5e7eb 1px, transparent 1px)
-    ;
-    background-size: 40px 40px;  */
-
-/* box-shadow: 10px 10px 10px rgb(209, 220, 235); */
-
-/* background: linear-gradient(to right, rgb(189, 220, 230) 20%, rgb(142, 173, 214) 40%, rgb(136, 169, 235) 60%, rgb(197, 201, 221) 80%); */
