Add - Hojas de estilos para cambiar tamaño logos cursos

--- a/src/styles/layout/layout-header.css
+++ b/src/styles/layout/layout-header.css
@@ -176,10 +176,13 @@
     transform: scale(1.1);
 }
 
+
+/*
 .cursos__logos--udemy {
     width: 9rem;
     height: auto;
 }
+
 
 .cursos__logos--youtube {
     width: 9rem;
@@ -206,7 +209,7 @@
     width: 8rem;
     height: auto;
 }
-
+*/
 
 /*
     ----------------------------------------------
